--- a/Bloodsucker.csproj
+++ b/Bloodsucker.csproj
@@ -49,14 +49,8 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="0Harmony">
-      <HintPath>E:\Steam\steamapps\workshop\content\294100\2009463077\1.4\Assemblies\0Harmony.dll</HintPath>
-    </Reference>
     <Reference Include="Assembly-CSharp">
-      <HintPath>E:\Steam\steamapps\common\RimWorld\RimWorldWin64_Data\Managed\Assembly-CSharp.dll</HintPath>
-    </Reference>
-    <Reference Include="HarmonyMod">
-      <HintPath>E:\Steam\steamapps\workshop\content\294100\2009463077\1.4\Assemblies\HarmonyMod.dll</HintPath>
+      <HintPath>D:\Steam\steamapps\common\RimWorld\RimWorldWin64_Data\Managed\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -66,23 +60,18 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="Unity.Burst.Unsafe">
-      <HintPath>E:\Steam\steamapps\common\RimWorld\RimWorldWin64_Data\Managed\Unity.Burst.Unsafe.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEngine">
-      <HintPath>E:\Steam\steamapps\common\RimWorld\RimWorldWin64_Data\Managed\UnityEngine.dll</HintPath>
+      <HintPath>D:\Steam\steamapps\common\RimWorld\RimWorldWin64_Data\Managed\UnityEngine.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null" />
-    <Reference Include="VanillaRacesExpanded-Sanguophage">
-      <HintPath>E:\Steam\steamapps\workshop\content\294100\2963116383\1.5\Assemblies\VanillaRacesExpanded-Sanguophage.dll</HintPath>
-    </Reference>
-    <Reference Include="VFECore">
-      <HintPath>E:\Steam\steamapps\workshop\content\294100\2023507013\1.5\Assemblies\VFECore.dll</HintPath>
+    <Reference Include="UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>D:\Steam\steamapps\common\RimWorld\RimWorldWin64_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BloodSucking\CompAbilityEffect_BloodSucking.cs" />
+    <Compile Include="BloodSucking\CompProperties_Main.cs" />
     <Compile Include="BloodSucking\CompProperties_AbilityBloodSucking.cs" />
+    <Compile Include="UsingHediff.cs" />
     <Compile Include="Monolith\CompObelisk_Xenochanger.cs" />
     <Compile Include="Monolith\Dialog_SelectPawnToApproachObelisk.cs" />
     <Compile Include="Monolith\IncidentWorker_MonolithCrystal.cs" />
